@@ -1,3 +1,10 @@
+2007-09-07  Tatsuya BIZENN  <bizenn@arthub.net>
+
+	* Fix: src/kahua/server.scm
+	  Drop extra escape on stack dump in the default error handler.
+	  Fix unexpected error when parameter kahua-default-error-handler
+	  is not set explicitly.
+
 2007-08-31  Tatsuya BIZENN  <bizenn@arthub.net>
 
 	* Fix: emacs/kahua.el.in
